[WIP]useSelector auth state
